--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '23.0.2'
-        distribution: 'adoptopenjdk'  # or 'zulu' if you prefer a different distribution
+        distribution: 'temurin'  # Using Temurin instead of AdoptOpenJDK
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
