--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,32 +8,39 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
-    
+
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
         java-version: '23.0.2'
-        distribution: 'temurin'  # Using Temurin instead of AdoptOpenJDK
+        distribution: 'temurin'  # Use Temurin for Java 23
+
+    - name: Install Apache Ant
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ant
+
+    - name: Run Ant build
+      run: |
+        cd $GITHUB_WORKSPACE  # Ensure we're in the correct directory
+        ant build  # Run Ant build (adjust the target if necessary)
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 'latest'
         distribution: 'apt'  # For Ubuntu-based systems
-    
-    - name: Run tests (if necessary)
-      run: mvn test  # Or your preferred testing command (e.g., gradle test)
-    
+
     - name: Terraform Initialization
       run: terraform init
-    
+
     - name: Apply Terraform
       run: terraform apply -auto-approve
-    
+
     - name: Deploy Web Application
       run: |
-        curl -u ${{ secrets.DEPLOY_USERNAME }}:${{ secrets.DEPLOY_PASSWORD }} -X POST http://220.247.246.76:8080/deploy  # Replace this with your actual deploy command
+        curl -u ${{ secrets.DEPLOY_USERNAME }}:${{ secrets.DEPLOY_PASSWORD }} -X POST http://220.247.246.76:8080/deploy
