--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '23.0.2'
-        distribution: 'temurin'  # Use Temurin for Java 23
+        distribution: 'temurin'
 
     - name: Install Apache Ant
       run: |
@@ -27,7 +27,7 @@ jobs:
     - name: Run Ant build
       run: |
         cd $GITHUB_WORKSPACE  # Ensure we're in the correct directory
-        ant build  # Run Ant build (adjust the target if necessary)
+        ant compile  # Replace 'compile' with the correct target name from build-impl.xml
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
