--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,10 +24,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y ant
 
-    - name: Run Ant build
+    - name: Run Ant build with server home directory
       run: |
         cd $GITHUB_WORKSPACE  # Ensure we're in the correct directory
-        ant compile  # Replace 'compile' with the correct target name from build-impl.xml
+        ant -Dj2ee.server.home=/home/aruna/javaapp  # Replace with actual server path
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
