--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,25 +1,32 @@
-# This workflow will build a Java project with Ant
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-ant
-
-name: Java CI
+name: Build and Test Mega City Cab Service
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+        distribution: 'adoptopenjdk'
+
+    - name: Install Apache Ant
+      run: sudo apt-get install ant
+
+    - name: Build Project with Ant
+      run: ant -f build.xml
+
+    - name: Run Tests
+      run: ant -f build.xml test
