--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 11
+    - name: Set up JDK 11 (Adoptium/Temurin)
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'adoptopenjdk'
+        distribution: 'temurin'
 
     - name: Install Apache Ant
       run: sudo apt-get install ant
