--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,4 +1,4 @@
-name: Build and Test Mega City Cab Service
+name: Check Build Components for Mega City Cab Service
 
 on:
   push:
@@ -9,19 +9,53 @@ on:
       - main
 
 jobs:
-  build:
+  check-components:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-
+    
     - name: Set up Docker Container with NetBeans
       uses: addnab/docker-run-action@v3
       with:
         image: your-docker-image-with-netbeans
         options: -v ${{ github.workspace }}:/workspace
         run: |
+          # Navigate to the workspace directory where the project files are located
           cd /workspace
-          ant -f build.xml -Dj2ee.server.home=/
-
+          
+          # Check if Java is installed and display the version
+          java -version
+          
+          # Check if Ant is installed and display the version
+          ant -version
+          
+          # Check if NetBeans related components are available
+          if [ -f "/path/to/netbeans/installation" ]; then
+            echo "NetBeans is installed."
+          else
+            echo "NetBeans is not installed."
+          fi
+          
+          # Check if the build.xml file exists
+          if [ -f "build.xml" ]; then
+            echo "build.xml found."
+          else
+            echo "build.xml not found."
+            exit 1
+          fi
+          
+          # Check if necessary server path exists (optional, based on your needs)
+          if [ -d "/path/to/javaee/server" ]; then
+            echo "Java EE server found."
+          else
+            echo "Java EE server not found."
+            exit 1
+          fi
+          
+          # Display the contents of the build file (optional for inspection)
+          cat build.xml
+          
+          # Finally, show the contents of the workspace to ensure everything is in place
+          ls -alh /workspace
